--- a/UserDoc.html
+++ b/UserDoc.html
@@ -24,6 +24,7 @@
 <li><a href="/wiki/wiki/UserDoc/TorVM">Tor proxy VM</a> documentation</li>
 <li><a href="/wiki/wiki/UserDoc/XFCE">XFCE</a> installation in dom0</li>
 <li><a href="/wiki/wiki/UserDoc/DispVMCustomization">DispVM Customization</a></li>
+<li><a href="/wiki/wiki/LinuxHVMTips">Tips for using Linux in HVM</a></li>
 </ul>
 <p>Command-line tools reference:</p>
 <ul>
