--- a/UserDoc.html
+++ b/UserDoc.html
@@ -35,7 +35,7 @@
 <ul>
 <li><a href="/wiki/wiki/InstallNvidiaDriver">How to install Nvidia driver in dom0</a></li>
 <li><a href="/wiki/wiki/SonyVaioTinkering">Getting Sony Vaio Z laptop to work with Qubes</a></li>
-<li><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/5a0dfc38fd1cc16a">​How to get composition working on ATI GPUs</a></li>
+<li><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/e27a57b0eda62f76">​Installing on system with new AMD GPU (missing firmware problem)</a></li>
 <li><a href="https://groups.google.com/group/qubes-devel/msg/4ca950ab6d7cd11a">​How to make proxy for individual tcp connection from networkless VM</a></li>
 <li><a href="https://groups.google.com/group/qubes-devel/msg/34f67194d3422bfa">​How to run TorBrowser using external tor proxy (from TorVM)</a></li>
 <li><a href="https://groups.google.com/group/qubes-devel/msg/4015c8900a813985">​Creating NetBSD VM</a></li>
