--- a/HvmCreate.html
+++ b/HvmCreate.html
@@ -172,6 +172,7 @@ dir c:\
 C:\Windows\system32&gt;exit
 exit</code></pre>
 <p>Another things to check are if clipboard copy/paste and file copy works fine with this VM.</p>
+<p>And the screenshot below illustrates the Send To entries in a Windows VM that can be used to copy/send files to other Qubes domains:</p>
 <h2 id="AssigningPCIdevicestoHVMdomains">Assigning PCI devices to HVM domains</h2>
 <p>HVM domains (including Windows VMs) can be <a href="/wiki/wiki/AssigningDevices">assigned PCI devices</a> just like normal AppVMs. E.g. one can assign one of the USB controllers to the Windows VM and should be able to use various devices that require Windows software, such as phones, electronic devices that are configured via FTDI, etc.</p>
 <p>Once problem, however, at the moment, is that after the whole system gets suspend into S3 sleep, and subsequently resumed, such attached devices stop working and should be restarted within the VM. Under Windows this can be achieved by opening the Device Manager, selecting the actual device, such as a USB controller, and then first 'Disabling', and then 'Enabling' the device again. This is illustrated on the screenshot below:</p>
