--- a/HCL.html
+++ b/HCL.html
@@ -21,90 +21,72 @@
 <h2 id="HardwareCompatibilityList">Hardware Compatibility List</h2>
 <p>Device</p>
 <p>Qubes R1</p>
-<p>Qubes R2</p>
-<p>Kernel</p>
-<p>Xorg</p>
+<p>Qubes R2 Beta1</p>
+<p>Standard feautures</p>
 <p>VT-d</p>
-<p>PCI</p>
-<p>Kernel</p>
-<p>Xorg</p>
+<p>TPM</p>
+<p>Remarks</p>
+<p>Standard features</p>
 <p>VT-x</p>
 <p>VT-d</p>
-<p>PCI</p>
-<p>USB</p>
+<p>TPM</p>
+<p>Remarks</p>
 <p>Lenovo Thinkpad T420</p>
 <p>OK</p>
 <p>OK</p>
+<p>?</p>
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
+<p>?</p>
 <p>Lenovo Thinkpad T420s</p>
-<p>3.2.7+</p>
+<p>OK</p>
+<p>OK</p>
+<p>?</p>
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
+<p>?</p>
 <p>Lenovo Thinkpad T61<br /> (Nvidia Quadro NVS 140M)</p>
 <p>OK</p>
-<p>OK</p>
 <p>X</p>
-<p>OK</p>
-<p>OK</p>
+<p>?</p>
 <p>OK</p>
 <p>OK</p>
 <p>X</p>
-<p>OK</p>
-<p>OK</p>
+<p>?</p>
 <p>Samsung X460</p>
 <p>OK</p>
-<p>OK</p>
 <p>X</p>
-<p>OK</p>
-<p>OK</p>
+<p>?</p>
 <p>OK</p>
 <p>OK</p>
 <p>X</p>
-<p>OK</p>
-<p>OK</p>
+<p>?</p>
 <p>Sony Vaio Z 12 <br /> (2010 edition)</p>
 <p>OK</p>
-<p><a href="https://qubes-os.org/trac/wiki/SonyVaioTinkering">OK</a></p>
+<p>OK</p>
+<p>?</p>
+<p><a href="https://qubes-os.org/trac/wiki/SonyVaioTinkering">link</a></p>
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
-<p><a href="https://qubes-os.org/trac/wiki/SonyVaioTinkering">OK</a></p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
+<p>?</p>
+<p><a href="https://qubes-os.org/trac/wiki/SonyVaioTinkering">link</a></p>
 <p>Dell Latitude E6420<br /> (Intel HD graphics; Sandy Bridge; i5-2520M)</p>
-<p>3.4.18+</p>
+<p>OK</p>
+<p>OK</p>
+<p>?</p>
+<p>needs kernel 3.4.17+</p>
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
-<p>3.4.18+</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
+<p>?</p>
+<p>needs kernel 3.4.17+</p>
 <p>Fujitsu S751<br /> (HD3000; QM67; i5-2520M; BIOS 1.18)</p>
 <p>OK</p>
 <p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
+<p>?</p>
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
@@ -112,21 +94,17 @@
 <p>Sony Vaio Z2<br /> (2011 edition)</p>
 <p>OK</p>
 <p>OK</p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">OK</a></p>
-<p>OK</p>
 <p>?</p>
-<p>?</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">link</a></p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
 <p>Lenovo Thinkpad W510<br /> (nVidia; i7-Q820)</p>
 <p>OK</p>
-<p><a href="https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ">OK</a></p>
-<p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p>?</p>
+<p><a href="https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ">link</a></p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
@@ -134,21 +112,16 @@
 <p>Lenovo Thinkpad x220<br /> (HD?000; i5-?)</p>
 <p>OK</p>
 <p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>?</p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
 <p>Lenovo Thinkpad x230</p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">Custom</a></p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">Custom</a></p>
+<p>*</p>
 <p>OK</p>
 <p>OK</p>
-<p>?</p>
-<p>?</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">link</a></p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
@@ -156,21 +129,17 @@
 <p>Dell Latitude 5520</p>
 <p>OK</p>
 <p>OK</p>
-<p>OK</p>
-<p><a href="https://groups.google.com/group/qubes-devel/msg/7418e7084c2de99f?hl=en">OK</a></p>
 <p>?</p>
-<p>?</p>
+<p><a href="https://groups.google.com/group/qubes-devel/msg/7418e7084c2de99f?hl=en">link</a></p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
 <p>Dell Latitude E6520</p>
 <p>OK</p>
-<p><a href="https://groups.google.com/group/qubes-devel/msg/340afc6fc2d06d0e">OK</a></p>
-<p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p>?</p>
+<p><a href="https://groups.google.com/group/qubes-devel/msg/340afc6fc2d06d0e">link</a></p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
@@ -178,9 +147,6 @@
 <p>Dell PowerEdge T110 II <br /> (onboard Matrox; Xeon E3-1230)</p>
 <p>OK</p>
 <p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>?</p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
@@ -189,21 +155,16 @@
 <p>Dell Precision M4600 <br /> (i7-2860QM; NVIDIA Quadro 1000M)</p>
 <p>OK</p>
 <p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>?</p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
 <p>Toshiba Tecra S11</p>
-<p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/fdec0ec165a87726">OK</a></p>
-<p>OK</p>
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p>?</p>
+<p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/fdec0ec165a87726">link</a></p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
@@ -211,9 +172,6 @@
 <p>Toshiba Tecra A11-15X <br /> (i7-M620)</p>
 <p>OK</p>
 <p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>?</p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
@@ -222,9 +180,6 @@
 <p>Toshiba M780 S7240 <br /> (BIOS latest)</p>
 <p>OK</p>
 <p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>?</p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
