--- a/HCL.html
+++ b/HCL.html
@@ -67,12 +67,12 @@
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p><a href="https://qubes-os.org/trac/wiki/SonyVaioTinkering">link</a></p>
+<p><a href="/trac/wiki/SonyVaioTinkering">link</a></p>
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p><a href="https://qubes-os.org/trac/wiki/SonyVaioTinkering">link</a></p>
+<p><a href="/trac/wiki/SonyVaioTinkering">link</a></p>
 <p>Dell Latitude E6420<br /> (Intel HD graphics; Sandy Bridge; i5-2520M)</p>
 <p>OK</p>
 <p>OK</p>
