--- a/HCL.html
+++ b/HCL.html
@@ -95,7 +95,7 @@
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">link</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">​link</a></p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
@@ -104,7 +104,7 @@
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p><a href="https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ">link</a></p>
+<p><a href="https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ">​link</a></p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
@@ -121,7 +121,7 @@
 <p>*</p>
 <p>OK</p>
 <p>?</p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">link</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">​link</a></p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
@@ -130,7 +130,7 @@
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p><a href="https://groups.google.com/group/qubes-devel/msg/7418e7084c2de99f?hl=en">link</a></p>
+<p><a href="https://groups.google.com/group/qubes-devel/msg/7418e7084c2de99f?hl=en">​link</a></p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
@@ -139,7 +139,7 @@
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p><a href="https://groups.google.com/group/qubes-devel/msg/340afc6fc2d06d0e">link</a></p>
+<p><a href="https://groups.google.com/group/qubes-devel/msg/340afc6fc2d06d0e">​link</a></p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
@@ -164,7 +164,7 @@
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/fdec0ec165a87726">link</a></p>
+<p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/fdec0ec165a87726">​link</a></p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
