--- a/HCL.html
+++ b/HCL.html
@@ -40,6 +40,7 @@
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
+<p>Qubes core developers</p>
 <p>Lenovo Thinkpad T420s</p>
 <p>OK</p>
 <p>OK</p>
@@ -48,6 +49,7 @@
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
+<p>Qubes core developers</p>
 <p>Lenovo Thinkpad T61<br /> (Nvidia Quadro NVS 140M)</p>
 <p>OK</p>
 <p>X</p>
@@ -56,6 +58,7 @@
 <p>OK</p>
 <p>X</p>
 <p>?</p>
+<p>Qubes core developers</p>
 <p>Samsung X460</p>
 <p>OK</p>
 <p>X</p>
@@ -64,6 +67,7 @@
 <p>OK</p>
 <p>X</p>
 <p>?</p>
+<p>Qubes core developers</p>
 <p>Sony Vaio Z 12 <br /> (2010 edition)</p>
 <p>OK</p>
 <p>OK</p>
@@ -74,6 +78,7 @@
 <p>OK</p>
 <p>?</p>
 <p><a href="/trac/wiki/SonyVaioTinkering">link</a></p>
+<p>Qubes core developers</p>
 <p>Dell Latitude E6420<br /> (Intel HD graphics; Sandy Bridge; i5-2520M)</p>
 <p>OK</p>
 <p>OK</p>
@@ -84,6 +89,7 @@
 <p>OK</p>
 <p>?</p>
 <p>needs kernel 3.4.17+</p>
+<p>Qubes core developers</p>
 <p>Fujitsu S751<br /> (HD3000; QM67; i5-2520M; BIOS 1.18)</p>
 <p>OK</p>
 <p>OK</p>
@@ -92,6 +98,7 @@
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
+<p><a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Laszlo Zrubecz</a></p>
 <p>Sony Vaio Z2<br /> (2011 edition)</p>
 <p>OK</p>
 <p>OK</p>
@@ -101,6 +108,7 @@
 <p>?</p>
 <p>?</p>
 <p>?</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">​Danny Fullerton</a></p>
 <p>Lenovo Thinkpad W510<br /> (nVidia; i7-Q820)</p>
 <p>OK</p>
 <p>OK</p>
@@ -110,6 +118,7 @@
 <p>?</p>
 <p>?</p>
 <p>?</p>
+<p><a href="https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ">​Sebastian Hültenschmidt</a></p>
 <p>Lenovo Thinkpad x220<br /> (HD?000; i5-?)</p>
 <p>OK</p>
 <p>OK</p>
@@ -118,6 +127,7 @@
 <p>?</p>
 <p>?</p>
 <p>?</p>
+<p><a href="https://groups.google.com/group/qubes-devel/msg/f41578eef913446a">​Stefan Boresch</a></p>
 <p>Lenovo Thinkpad x230</p>
 <p>*</p>
 <p>OK</p>
@@ -127,6 +137,7 @@
 <p>?</p>
 <p>?</p>
 <p>?</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">​Chris</a></p>
 <p>Dell Latitude 5520</p>
 <p>OK</p>
 <p>OK</p>
@@ -136,6 +147,7 @@
 <p>?</p>
 <p>?</p>
 <p>?</p>
+<p><a href="https://groups.google.com/group/qubes-devel/msg/7418e7084c2de99f?hl=en">​Erik Edin</a></p>
 <p>Dell Latitude E6520</p>
 <p>OK</p>
 <p>OK</p>
@@ -145,6 +157,7 @@
 <p>?</p>
 <p>?</p>
 <p>?</p>
+<p><a href="https://groups.google.com/group/qubes-devel/msg/340afc6fc2d06d0e">​Steven Collins</a></p>
 <p>Dell PowerEdge T110 II <br /> (onboard Matrox; Xeon E3-1230)</p>
 <p>OK</p>
 <p>OK</p>
@@ -153,6 +166,7 @@
 <p>?</p>
 <p>?</p>
 <p>?</p>
+<p><a href="https://groups.google.com/group/qubes-devel/msg/8a894915909eeaee">​Geoff</a></p>
 <p>Dell Precision M4600 <br /> (i7-2860QM; NVIDIA Quadro 1000M)</p>
 <p>OK</p>
 <p>OK</p>
@@ -161,6 +175,7 @@
 <p>?</p>
 <p>?</p>
 <p>?</p>
+<p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/ddf35d12a35f96a3">​nqe</a></p>
 <p>Toshiba Tecra S11</p>
 <p>OK</p>
 <p>OK</p>
@@ -170,6 +185,7 @@
 <p>?</p>
 <p>?</p>
 <p>?</p>
+<p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/fdec0ec165a87726">​Jan Beerden</a></p>
 <p>Toshiba Tecra A11-15X <br /> (i7-M620)</p>
 <p>OK</p>
 <p>OK</p>
@@ -178,6 +194,7 @@
 <p>?</p>
 <p>?</p>
 <p>?</p>
+<p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/c0d5f6a33d672b62">​PirBoazo</a></p>
 <p>Toshiba M780 S7240 <br /> (BIOS latest)</p>
 <p>OK</p>
 <p>OK</p>
@@ -186,3 +203,4 @@
 <p>?</p>
 <p>?</p>
 <p>?</p>
+<p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/66e97c990a08d8e2">​Franz</a></p>
