--- a/HCL.html
+++ b/HCL.html
@@ -98,7 +98,7 @@
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p><a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Laszlo Zrubecz</a></p>
+<p><a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubi</a></p>
 <p>Sony Vaio Z2<br /> (2011 edition)</p>
 <p>OK</p>
 <p>OK</p>
