--- a/HCL.html
+++ b/HCL.html
@@ -204,3 +204,13 @@
 <p>?</p>
 <p>?</p>
 <p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/66e97c990a08d8e2">​Franz</a></p>
+<h2 id="Submittingnewresults">Submitting new results</h2>
+<p>If you want to submit any new results please send a mail to <a href="http://qubes-os.org/trac/wiki/QubesLists">​the mailing list</a> with the following details included:</p>
+<ul>
+<li>Subject: HCL - &lt;your machine model name&gt;</li>
+<li>VGA</li>
+<li>CPU</li>
+<li>Chipset</li>
+<li>BIOS version</li>
+</ul>
+<p>And of course include any information about the mentioned Qubes features.</p>
