--- a/HCL.html
+++ b/HCL.html
@@ -119,6 +119,15 @@
 <p>?</p>
 <p>?</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ">​Sebastian Hültenschmidt</a></p>
+<p>Lenovo Thinkpad X61t</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>OK</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p><a href="https://groups.google.com/forum/clear.cache.gif">​George Walker</a></p>
 <p>Lenovo Thinkpad x220<br /> (HD?000; i5-?)</p>
 <p>OK</p>
 <p>OK</p>
