--- a/HCL.html
+++ b/HCL.html
@@ -127,7 +127,7 @@
 <p>?</p>
 <p>?</p>
 <p>?</p>
-<p><a href="https://groups.google.com/forum/clear.cache.gif">​George Walker</a></p>
+<p><a href="https://groups.google.com/d/topic/qubes-devel/4IrF1A6sa3U/discussion">​George Walker</a></p>
 <p>Lenovo Thinkpad x220<br /> (HD?000; i5-?)</p>
 <p>OK</p>
 <p>OK</p>
