--- a/HCL.html
+++ b/HCL.html
@@ -25,12 +25,12 @@
 <p>Reported by</p>
 <p>Standard feautures</p>
 <p>VT-d</p>
-<p>TPM</p>
+<p>AEM</p>
 <p>Remarks</p>
 <p>Standard features</p>
 <p>VT-x</p>
 <p>VT-d</p>
-<p>TPM</p>
+<p>AEM</p>
 <p>Remarks</p>
 <p>Lenovo Thinkpad T420</p>
 <p>OK</p>
@@ -72,12 +72,12 @@
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p><a href="/trac/wiki/SonyVaioTinkering">link</a></p>
+<p><a href="/trac/wiki/SonyVaioTinkering">read more</a></p>
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p><a href="/trac/wiki/SonyVaioTinkering">link</a></p>
+<p><a href="/trac/wiki/SonyVaioTinkering">read more</a></p>
 <p>Qubes core developers</p>
 <p>Dell Latitude E6420<br /> (Intel HD graphics; Sandy Bridge; i5-2520M)</p>
 <p>OK</p>
@@ -103,7 +103,7 @@
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">​link</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">​read more</a></p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
@@ -113,7 +113,7 @@
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p><a href="https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ">​link</a></p>
+<p><a href="https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ">​read more</a></p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
@@ -141,7 +141,7 @@
 <p>*</p>
 <p>OK</p>
 <p>?</p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">​link</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">​read more</a></p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
@@ -151,7 +151,7 @@
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p><a href="https://groups.google.com/group/qubes-devel/msg/7418e7084c2de99f?hl=en">​link</a></p>
+<p><a href="https://groups.google.com/group/qubes-devel/msg/7418e7084c2de99f?hl=en">​read more</a></p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
@@ -161,7 +161,7 @@
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p><a href="https://groups.google.com/group/qubes-devel/msg/340afc6fc2d06d0e">​link</a></p>
+<p><a href="https://groups.google.com/group/qubes-devel/msg/340afc6fc2d06d0e">​read more</a></p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
@@ -189,7 +189,7 @@
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
-<p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/fdec0ec165a87726">​link</a></p>
+<p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/fdec0ec165a87726">​read more</a></p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
