--- a/GUIdocs.html
+++ b/GUIdocs.html
@@ -217,7 +217,7 @@
 <tr class="even">
 <td style="text-align: left;">MSG_KEYMAP_NOTIFY</td>
 <td style="text-align: left;"><code> unsigned char remote_keys[32]; </code></td>
-<td style="text-align: left;">Synchronize the keyboard state (key pressed/depressed) with dom0</td>
+<td style="text-align: left;">Synchronize the keyboard state (key pressed/released) with dom0</td>
 </tr>
 <tr class="odd">
 <td style="text-align: left;">MSG_WINDOW_FLAGS</td>
