--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -20,5 +20,5 @@
 <li><a href="/wiki/wiki/KdeDom0">KDE Dom0 packages for Qubes</a></li>
 <li><a href="/wiki/wiki/InstallationIsoBuilding">How to build Qubes installation ISO</a></li>
 <li><a href="/wiki/wiki/USBVM">Building USB passthrough support (experimental)</a></li>
-<li><a href="/wiki/wiki/Building">a TemplateVM based on ArchLinux?</a></li>
+<li><a href="/wiki/wiki/BuildingNonFedoraTemplate">Building a TemplateVM based on ArchLinux</a></li>
 </ul>
