--- a/BuildingNonFedoraTemplate.html
+++ b/BuildingNonFedoraTemplate.html
@@ -15,14 +15,108 @@
 <p>Note once the package has been successfully compiled and installed, you need to setup XEN filesystem. Add the folowing line to your fstab (you can create this line in your package install script): <code>xen                     /proc/xen               xenfs   defaults        0 0</code></p>
 <p>Now install the package you built and mount /proc/xen. Verify that xenstore-read works by running: <code>xenstore-read qubes_vm_type</code> That should give you the current VM type such as HVM or AppVM.</p>
 <h3 id="Qubes-OScoreagentsqrexec...">Qubes-OS core agents (qrexec...)</h3>
+<p><a href="https://aur.archlinux.org/packages/qu/qubes-vm-core/PKGBUILD">​https://aur.archlinux.org/packages/qu/qubes-vm-core/PKGBUILD</a></p>
 <h3 id="Qubes-OSkernelmodules">Qubes-OS kernel modules</h3>
+<p><a href="https://aur.archlinux.org/packages/qu/qubes-vm-kernel-modules/PKGBUILD">​https://aur.archlinux.org/packages/qu/qubes-vm-kernel-modules/PKGBUILD</a></p>
 <h3 id="Qubes-OSguiagents">Qubes-OS gui agents</h3>
+<p><a href="https://aur.archlinux.org/packages/qu/qubes-vm-gui/PKGBUILD">​https://aur.archlinux.org/packages/qu/qubes-vm-gui/PKGBUILD</a></p>
 <h2 id="Creatingatemplatebuilder">Creating a template builder</h2>
-<h3 id="a01_prepare">01_prepare</h3>
-<h3 id="a02_install_core">02_install_core</h3>
-<h3 id="a03_install_groups">03_install_groups</h3>
-<h3 id="a05_install_qubes">05_install_qubes</h3>
-<h3 id="a09_cleanup">09_cleanup</h3>
+<h3 id="a00_prepare.sh">00_prepare.sh</h3>
+<pre class="wiki"><code>#!/bin/sh
+
+echo &quot;Downloading Archlinux dvd...&quot;
+wget -O &quot;archlinux.iso&quot; &quot;http://mir.archlinux.fr/iso/latest/arch/x86_64/root-image.fs.sfs&quot; --continue
+
+echo &quot;Extracting squash filesystem from DVD...&quot;
+mkdir archlinux_dvd
+sudo mount -o loop archlinux.iso archlinux_dvd
+cp archlinux_dvd/root-image.fs .
+sudo umount archlinux_dvd</code></pre>
+<h3 id="a01_install_core.sh">01_install_core.sh</h3>
+<pre class="wiki"><code>#!/bin/sh
+
+echo &quot;Mounting archlinux install system into archlinux_dvd...&quot;
+sudo mount root-image.fs archlinux_dvd
+
+echo &quot;Creating chroot bootstrap environment&quot;
+
+sudo mount --bind $INSTALLDIR archlinux_dvd/mnt
+sudo cp /etc/resolv.conf archlinux_dvd/etc
+
+echo &quot;-&gt; Initializing pacman keychain&quot;
+sudo ./archlinux_dvd/usr/bin/arch-chroot archlinux_dvd/ pacman-key --init
+sudo ./archlinux_dvd/usr/bin/arch-chroot archlinux_dvd/ pacman-key --populate
+
+echo &quot;-&gt; Installing core pacman packages...&quot;
+sudo ./archlinux_dvd/usr/bin/arch-chroot archlinux_dvd/ sh -c &#39;pacstrap /mnt base&#39;
+
+echo &quot;-&gt; Cleaning up bootstrap environment&quot;
+sudo umount archlinux_dvd/mnt
+
+sudo umount archlinux_dvd
+
+cp scripts_&quot;${DIST}&quot;/resolv.conf $INSTALLDIR/etc</code></pre>
+<h3 id="a02_install_groups.sh">02_install_groups.sh</h3>
+<pre class="wiki"><code>echo &quot;Mounting archlinux install system into archlinux_dvd...&quot;
+sudo mount root-image.fs archlinux_dvd
+
+echo &quot;-&gt; Installing archlinux package groups...&quot;
+echo &quot;-&gt; Selected packages:&quot;
+echo &quot;$PKGGROUPS&quot;
+sudo ./archlinux_dvd/usr/bin/arch-chroot $INSTALLDIR pacman --needed --noconfirm -S $PKGGROUPS
+
+sudo umount archlinux_dvd</code></pre>
+<h3 id="a04_install_qubes.sh">04_install_qubes.sh</h3>
+<pre class="wiki"><code>#!/bin/sh
+
+echo &quot;Mounting archlinux install system into archlinux_dvd...&quot;
+sudo mount root-image.fs archlinux_dvd
+
+echo $INSTALLDIR
+
+echo &quot;--&gt; Installing yaourt...&quot;
+sudo ./archlinux_dvd/usr/bin/arch-chroot $INSTALLDIR sh -c &#39;cd tmp &amp;&amp; wget https://aur.archlinux.org/packages/pa/package-query/package-query.tar.gz &amp;&amp; tar xzvf package-query.tar.gz &amp;&amp; cd package-query &amp;&amp; makepkg --asroot &amp;&amp; pacman --noconfirm -U package-query-*.pkg.tar.xz&#39;
+sudo ./archlinux_dvd/usr/bin/arch-chroot $INSTALLDIR sh -c &#39;cd tmp &amp;&amp; wget https://aur.archlinux.org/packages/ya/yaourt/yaourt.tar.gz &amp;&amp; tar xzvf yaourt.tar.gz &amp;&amp; cd yaourt &amp;&amp; makepkg --asroot &amp;&amp; pacman --noconfirm -U yaourt-*.pkg.tar.xz&#39;
+
+echo &quot;--&gt; Preparing build environment inside the chroot...&quot;
+# Notes for qubes-vm-xen
+# Note: we need more ram for /tmp (at least 700M of disk space for compiling XEN because of the sources...)
+sudo sed &#39;s:-t tmpfs -o mode=1777,strictatime,nodev,:-t tmpfs -o size=700M,mode=1777,strictatime,nodev,:&#39; -i ./archlinux_dvd/usr/bin/arch-chroot
+
+# Note: Enable x86 repos
+su -c &quot;echo &#39;[multilib]&#39; &gt;&gt; $INSTALLDIR/etc/pacman.conf&quot;
+su -c &quot;echo &#39;SigLevel = PackageRequired&#39; &gt;&gt; $INSTALLDIR/etc/pacman.conf&quot;
+su -c &quot;echo &#39;Include = /etc/pacman.d/mirrorlist&#39; &gt;&gt; $INSTALLDIR/etc/pacman.conf&quot;
+sudo ./archlinux_dvd/usr/bin/arch-chroot $INSTALLDIR sh -c &quot;pacman -Sy&quot;
+
+echo &quot;--&gt; Compiling and installing qubes-packages...&quot;
+sudo ./archlinux_dvd/usr/bin/arch-chroot $INSTALLDIR sh -c &quot;yaourt --noconfirm -S qubes-vm-xen&quot;
+sudo ./archlinux_dvd/usr/bin/arch-chroot $INSTALLDIR sh -c &quot;yaourt --noconfirm -S qubes-vm-core&quot;
+sudo ./archlinux_dvd/usr/bin/arch-chroot $INSTALLDIR sh -c &quot;yaourt --noconfirm -S qubes-vm-gui&quot;
+
+sudo umount archlinux_dvd</code></pre>
+<h3 id="a09_cleanup.sh">09_cleanup.sh</h3>
+<pre class="wiki"><code>#!/bin/sh
+
+echo &quot;Mounting archlinux install system into archlinux_dvd...&quot;
+sudo mount root-image.fs archlinux_dvd
+
+echo &quot;--&gt; Starting cleanup actions&quot;
+# Remove unused packages and their dependencies (make dependencies)
+cleanuppkgs=`sudo ./archlinux_dvd/usr/bin/arch-chroot $INSTALLDIR pacman -Qdt | cut -d &quot; &quot; -f 1`
+sudo ./archlinux_dvd/usr/bin/arch-chroot $INSTALLDIR pacman --noconfirm -Rsc $cleanuppkgs
+
+# Remove yaourt dependencies
+sudo ./archlinux_dvd/usr/bin/arch-chroot $INSTALLDIR pacman --noconfirm -Rsc binutils yajl gcc make
+
+# Clean pacman cache
+sudo ./archlinux_dvd/usr/bin/arch-chroot $INSTALLDIR pacman --noconfirm -Scc
+
+sudo umount archlinux_dvd</code></pre>
 <h2 id="Buildingatemplate">Building a template</h2>
+<pre class="wiki"><code>export DIST=archlinux
+make rpms</code></pre>
 <h2 id="Testingatemplate">Testing a template</h2>
 <h2 id="Extractingakernel">Extracting a kernel</h2>
+<h3 id="Qubesbootscriptsdracutinitramfs">Qubes boot scripts (dracut/initramfs)</h3>
+<h3 id="Modulesimage">Modules image</h3>
