--- a/CopyPaste.html
+++ b/CopyPaste.html
@@ -2,7 +2,7 @@
 <p>Qubes fully supports secure copy and paste operation between domains. In order to copy a clipboard from domain A to domain B, follow those steps:</p>
 <ol>
 <li>Click on the application window in the domain A where you have selected text for copying. Then use the <em>app-specific</em> hot-key (or menu option) to copy this into domain's local clipboard (in other words: do the copy operation as usual, in most cases by pressing Ctrl-C).</li>
-<li>Then (when the app in domain A is still in focus) press Ctrl-Shit-C magic hot-key. This will tell Qubes that we want to select this domain's clipboard for <em>global copy</em> between domains.</li>
+<li>Then (when the app in domain A is still in focus) press Ctrl-Shift-C magic hot-key. This will tell Qubes that we want to select this domain's clipboard for <em>global copy</em> between domains.</li>
 <li>Now select the destination app, running in domain B, and press Ctrl-Shift-V, another magic hot-key that will tell Qubes to make the clipboard marked in the previous step available to apps running in domain B. This step is necessary because it ensures that only domain B will get access to the clipboard copied from domain A, and not any other domain that might be running in the system.</li>
 <li>Now, in the destination app use the app-specific key combination (usually Ctrl-V) for pasting the clipboard.</li>
 </ol>
