--- a/HCL.html
+++ b/HCL.html
@@ -120,6 +120,15 @@
 <p>?</p>
 <p>?</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">​Danny Fullerton</a></p>
+<p>Lenovo T430<br /> (i5-3320)</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>?</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/S_VG_jgtpBo/VngCPK2W5FcJ">​Tunguuz</a></p>
 <p>Lenovo Thinkpad W510<br /> (nVidia; i7-Q820)</p>
 <p>OK</p>
 <p>OK</p>
