--- a/QubesLists.html
+++ b/QubesLists.html
@@ -4,6 +4,7 @@
 <li>The group's email address: <code>qubes-devel@googlegroups.com</code></li>
 <li>The Web interface: <a href="http://groups.google.com/group/qubes-devel">​http://groups.google.com/group/qubes-devel</a></li>
 </ul>
+<p><strong>RTFM</strong>: Before posting to the list, please make sure you read the <a href="/wiki/wiki/QubesDocs">documentation section</a>, especially the <a href="/wiki/wiki/UserDoc">User Guides</a>!</p>
 <p>To post to a group you don't need to subscribe, just send a message to the group's email address.</p>
 <p>You can subscribe either through the web interface (but then you need to create a google account), or by sending an empty message to:</p>
 <pre class="wiki"><code>qubes-devel+subscribe@googlegroups.com</code></pre>
