--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -8,8 +8,8 @@
 <li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-Beta1-x86_64-DVD.iso.asc/download">​Digital Signature</a> (via sourceforge.net)</li>
 </ul>
 <ul>
+<li><strong><a href="/wiki/wiki/InstallationGuideR2">Installation Guide</a></strong> &lt;--- You probably want to read this!</li>
 <li><a href="/wiki/wiki/HCL">Hardware Compatibility List</a></li>
-<li><a href="/wiki/wiki/InstallationGuideR2">Installation Guide</a></li>
 <li><a href="/wiki/wiki/UpgradeToR2">Upgrading from Qubes R1 to Qubes R2?</a></li>
 </ul>
 <h2 id="QubesRelease1">Qubes Release 1</h2>
@@ -18,8 +18,8 @@
 <li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R1-x86_64-DVD.iso.asc/download">​Digital Signature</a> (via sourceforge.net)</li>
 </ul>
 <ul>
+<li><strong><a href="/wiki/wiki/InstallationGuide">Installation Guide</a></strong> &lt;--- You probably want to read this!</li>
 <li><a href="/wiki/wiki/HCL">Hardware Compatibility List</a></li>
-<li><a href="/wiki/wiki/InstallationGuide">Installation Guide</a></li>
 </ul>
 <h2 id="Mirrors">Mirrors</h2>
 <p>Qubes ISOs are also available from the following mirrors:</p>
