--- a/HCL.html
+++ b/HCL.html
@@ -167,6 +167,16 @@
 <p>?</p>
 <p>?</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">​Chris</a></p>
+<p>HP Pavilion Sleekbook 14-B030TU<br /> (i5-3317U; BIOS F.06)</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>OK</p>
+<p>OK</p>
+<p>?</p>
+<p>?</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/ZC_SQJhXVOM/4aLjEc7GIsUJ">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/ZC_SQJhXVOM/4aLjEc7GIsUJ">​Stephen Boyd</a></p>
 <p>Dell Latitude 5520</p>
 <p>OK</p>
 <p>OK</p>
