--- a/HCL.html
+++ b/HCL.html
@@ -90,6 +90,16 @@
 <p>?</p>
 <p>needs kernel 3.4.17+</p>
 <p>Qubes core developers</p>
+<p>ASUS UX-31</p>
+<p>*</p>
+<p>?</p>
+<p>?</p>
+<p>*</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p><a href="https://groups.google.com/d/topic/qubes-devel/6I07Bbzn5M4/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/d/topic/qubes-devel/6I07Bbzn5M4/discussion">​Stephen Boyd</a></p>
 <p>Dell Latitude 5520</p>
 <p>OK</p>
 <p>OK</p>
