--- a/HCL.html
+++ b/HCL.html
@@ -138,6 +138,16 @@
 <p>?</p>
 <p>?</p>
 <p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/ddf35d12a35f96a3">​nqe</a></p>
+<p>Dell XPS 13<br /> (i5; intel HD; sandy bridge; BIOS A03)</p>
+<p>OK</p>
+<p>?</p>
+<p>?</p>
+<p>OK</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/7JumqdldVJM/n9TiDVxc2jkJ">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/7JumqdldVJM/n9TiDVxc2jkJ">​j</a></p>
 <p>Fujitsu S751<br /> (HD3000; QM67; i5-2520M; BIOS 1.18)</p>
 <p>OK</p>
 <p>OK</p>
