--- a/HCL.html
+++ b/HCL.html
@@ -167,7 +167,7 @@
 <p>?</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/ZC_SQJhXVOM/4aLjEc7GIsUJ">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/ZC_SQJhXVOM/4aLjEc7GIsUJ">​Stephen Boyd</a></p>
-<p>Lenovo T430<br /> (i5-3320)</p>
+<p>Lenovo Thinkpad T430<br /> (i5-3320)</p>
 <p>?</p>
 <p>?</p>
 <p>?</p>
@@ -176,6 +176,16 @@
 <p>OK</p>
 <p>?</p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/S_VG_jgtpBo/VngCPK2W5FcJ">​Tunguuz</a></p>
+<p>Lenovo Thinkpad T430s<br /> (i5-3320M; HD4000; QM77; BIOS 2.05)</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>?</p>
+<p><a href="https://groups.google.com/d/topic/qubes-devel/Z9seyOT46Ro/discussion">​read more</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/Z9seyOT46Ro/wX6tsrxE84sJ">​cprise</a></p>
 <p>Lenovo Thinkpad W510<br /> (nVidia; i7-Q820)</p>
 <p>OK</p>
 <p>OK</p>
