--- a/AssigningDevices.html
+++ b/AssigningDevices.html
@@ -8,6 +8,17 @@
 <h2 id="UsingQubesManager">Using Qubes Manager</h2>
 <p>TODO</p>
 <p>&lt;screenshot&gt;</p>
+<h2 id="FindingrightUSBcontroller">Finding right USB controller</h2>
+<p>If you want assign certain USB device to VM (by attaching whole USB controller), you need to figure out which PCI device is the right controller. First check to which USB bus device is connected:</p>
+<pre class="wiki"><code>lsusb</code></pre>
+<p>For example I want assign broadband modem to netvm. In lsusb output it can be something like (in this case device isn't fully identified):</p>
+<pre class="wiki"><code>Bus 003 Device 003: ID 413c:818d Dell Computer Corp.</code></pre>
+<p>The device is connected to USB bus 3. Then check which other devices are connected to the same bus - all of them will be assigned to the same VM. Now is the time to find right USB controller:</p>
+<pre class="wiki"><code>readlink /sys/bus/usb/devices/usb3</code></pre>
+<p>This should output something like:</p>
+<pre class="wiki"><code>../../../devices/pci-0/pci0000:00/0000:00:1a.0/usb3</code></pre>
+<p>Now you see BDF address in the path (right before final usb3). Strip leading &quot;0000:&quot; and pass the rest to qvm-pci tool:</p>
+<pre class="wiki"><code>qvm-pci -a netvm 00:1a.0</code></pre>
 <h2 id="Possibleissues">Possible issues</h2>
 <p>VM with PCI device in Qubes have allocated small buffer for DMA operations (called swiotlb). By default it is 2MB, but some devices needs a larger space. To change this allocation, edit VM kernel parameters (this is expressed in 512B chunks):</p>
 <pre class="wiki"><code># qvm-prefs netvm |grep kernelopts
