--- a/AssigningDevices.html
+++ b/AssigningDevices.html
@@ -1,27 +1,28 @@
-<p>In order to assign a whole PCI/e device to a VM one should use <code></code><code>qvm-pci</code><code></code> tool. E.g.</p>
+<h1 id="AssigningDevicestoVMs">Assigning Devices to VMs</h1>
+<p>In order to assign a whole PCI(e) device to a VM, one should use <code>qvm-pci</code> tool. E.g.</p>
 <pre class="wiki"><code>lspci</code></pre>
 <p>Find the BDF address of the device you want to assign, and then:</p>
 <pre class="wiki"><code>qvm-pci -a &lt;vmname&gt; &lt;bdf&gt;</code></pre>
-<p>E.g. assuming 00:1a.0 is a BDF of the device I want to assign to &quot;personal&quot; domain:</p>
+<p>E.g. assuming 00:1a.0 is a BDF of the device I want to assign to the &quot;personal&quot; domain:</p>
 <pre class="wiki"><code>qvm-pci -a personal 00:1a.0</code></pre>
 <p>Note that one can only assign full PCI or PCI Express devices. This means one cannot assign single USB devices -- only the whole USB controller with whatever USB devices connected to it. This limit is imposed by PC and VT-d architecture.</p>
 <h2 id="UsingQubesManager">Using Qubes Manager</h2>
 <p>TODO</p>
 <p>&lt;screenshot&gt;</p>
-<h2 id="FindingrightUSBcontroller">Finding right USB controller</h2>
-<p>If you want assign certain USB device to VM (by attaching whole USB controller), you need to figure out which PCI device is the right controller. First check to which USB bus device is connected:</p>
+<h2 id="FindingtherightUSBcontroller">Finding the right USB controller</h2>
+<p>If you want assign certain USB device to a VM (by attaching a whole USB controller), you need to figure out which PCI device is the right controller. First check to which USB bus the device is connected:</p>
 <pre class="wiki"><code>lsusb</code></pre>
-<p>For example I want assign broadband modem to netvm. In lsusb output it can be something like (in this case device isn't fully identified):</p>
+<p>For example I want assign a broadband modem to the netvm. In lsusb output it can be listed as something like this (in this case device isn't fully identified):</p>
 <pre class="wiki"><code>Bus 003 Device 003: ID 413c:818d Dell Computer Corp.</code></pre>
-<p>The device is connected to USB bus 3. Then check which other devices are connected to the same bus - all of them will be assigned to the same VM. Now is the time to find right USB controller:</p>
+<p>The device is connected to the USB bus #3. Then check which other devices are connected to the same bus - all of them will be assigned to the same VM. Now is the time to find right USB controller:</p>
 <pre class="wiki"><code>readlink /sys/bus/usb/devices/usb3</code></pre>
 <p>This should output something like:</p>
 <pre class="wiki"><code>../../../devices/pci-0/pci0000:00/0000:00:1a.0/usb3</code></pre>
 <p>Now you see BDF address in the path (right before final usb3). Strip leading &quot;0000:&quot; and pass the rest to qvm-pci tool:</p>
 <pre class="wiki"><code>qvm-pci -a netvm 00:1a.0</code></pre>
 <h2 id="Possibleissues">Possible issues</h2>
-<p>VM with PCI device in Qubes have allocated small buffer for DMA operations (called swiotlb). By default it is 2MB, but some devices needs a larger space. To change this allocation, edit VM kernel parameters (this is expressed in 512B chunks):</p>
+<p>VMs with assigned PCI devices in Qubes have allocated a small buffer for DMA operations (called swiotlb). By default it is 2MB, but some devices need a larger buffer. To change this allocation, edit VM's kernel parameters (this is expressed in 512B chunks):</p>
 <pre class="wiki"><code># qvm-prefs netvm |grep kernelopts
 kernelopts       : iommu=soft swiotlb=2048 (default)
 # qvm-prefs -s netvm kernelopts &quot;iommu=soft swiotlb=4096&quot;</code></pre>
-<p>This is <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/631c4a3a9d1186e3">​know to be needed</a> for Realtek RTL8111DL Gigabit Ethernet Controller.</p>
+<p>This is <a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/631c4a3a9d1186e3">​known to be needed</a> for Realtek RTL8111DL Gigabit Ethernet Controller.</p>
