--- a/HCL.html
+++ b/HCL.html
@@ -19,10 +19,10 @@
 <p><strong>Note:</strong> We don't recommend installing Qubes in a virtual machine!</p>
 <p><strong>Note:</strong> There is a problem with supporting keyboard and mouse on Mac, and so Mac hardware is currently unsupported (patches welcomed!)</p>
 <h2 id="HardwareCompatibilityList">Hardware Compatibility List</h2>
-<p>Device</p>
-<p>Qubes R1</p>
+<p><strong>Device</strong></p>
+<p><strong>Qubes R1</strong></p>
 <p>Qubes R2 Beta1</p>
-<p>Reported by</p>
+<p><strong>Reported by</strong></p>
 <p>Standard feautures</p>
 <p>VT-d</p>
 <p>AEM</p>
@@ -163,9 +163,9 @@
 <p>?</p>
 <p>OK</p>
 <p>OK</p>
+<p>OK</p>
 <p>?</p>
-<p>?</p>
-<p><a href="https://groups.google.com/d/msg/qubes-devel/ZC_SQJhXVOM/4aLjEc7GIsUJ">​read more</a></p>
+<p><a href="https://groups.google.com/d/topic/qubes-devel/ZC_SQJhXVOM/discussion">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/ZC_SQJhXVOM/4aLjEc7GIsUJ">​Stephen Boyd</a></p>
 <p>Lenovo Thinkpad T430<br /> (i5-3320)</p>
 <p>?</p>
