--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -4,6 +4,15 @@
 </ul>
 <h2 id="QubesRelease2">Qubes Release 2</h2>
 <ul>
+<li>[Qubes-R2-Beta2-x86_64-DVD.iso] (Coming soon!)</li>
+<li>[Digital Signature] (Coming soon!)</li>
+</ul>
+<ul>
+<li><strong><a href="/wiki/wiki/InstallationGuideR2B2">Installation Guide</a></strong> &lt;--- You probably want to read this!</li>
+<li><a href="/wiki/wiki/HCL">Hardware Compatibility List</a></li>
+<li><a href="/wiki/wiki/UpgradeToR2B2">Upgrading to Qubes R2 Beta 2</a></li>
+</ul>
+<ul>
 <li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-Beta1-x86_64-DVD.iso/download">​Qubes-R2-Beta1-x86_64-DVD.iso</a> (via sourceforge.net)</li>
 <li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-Beta1-x86_64-DVD.iso.asc/download">​Digital Signature</a> (via sourceforge.net)</li>
 </ul>
