--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -1,6 +1,7 @@
 <h1 id="QubesDownloads">Qubes Downloads</h1>
 <ul>
 <li><a href="/wiki/wiki/VerifyingSignatures">On digital signatures and how to verify Qubes downloads</a></li>
+<li><a href="/wiki/wiki/HCL">Hardware Compatibility List (covers all Qubes releases)</a></li>
 </ul>
 <h2 id="QubesRelease2">Qubes Release 2</h2>
 <ul>
@@ -9,7 +10,6 @@
 </ul>
 <ul>
 <li><strong><a href="/wiki/wiki/InstallationGuideR2B2">Installation Guide</a></strong> &lt;--- You probably want to read this!</li>
-<li><a href="/wiki/wiki/HCL">Hardware Compatibility List</a></li>
 <li><a href="/wiki/wiki/UpgradeToR2B2">Upgrading to Qubes R2 Beta 2</a></li>
 </ul>
 <ul>
@@ -18,7 +18,6 @@
 </ul>
 <ul>
 <li><strong><a href="/wiki/wiki/InstallationGuideR2B1">Installation Guide</a></strong> &lt;--- You probably want to read this!</li>
-<li><a href="/wiki/wiki/HCL">Hardware Compatibility List</a></li>
 <li><a href="/wiki/wiki/UpgradeToR2">Upgrading from Qubes R1 to Qubes R2?</a></li>
 </ul>
 <h2 id="QubesRelease1">Qubes Release 1</h2>
@@ -28,7 +27,6 @@
 </ul>
 <ul>
 <li><strong><a href="/wiki/wiki/InstallationGuide">Installation Guide</a></strong> &lt;--- You probably want to read this!</li>
-<li><a href="/wiki/wiki/HCL">Hardware Compatibility List</a></li>
 </ul>
 <h2 id="Mirrors">Mirrors</h2>
 <p>Qubes ISOs are also available from the following mirrors:</p>
