--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -9,7 +9,7 @@
 <li>[Digital Signature] (Coming soon!)</li>
 </ul>
 <ul>
-<li><strong><a href="/wiki/wiki/InstallationGuideR2B2">Installation Guide</a></strong> &lt;--- You probably want to read this!</li>
+<li><strong><a href="/wiki/wiki/InstallationGuideR2B2">Installation Guide for R2 Beta 2</a></strong></li>
 <li><a href="/wiki/wiki/UpgradeToR2B2">Upgrading to Qubes R2 Beta 2</a></li>
 </ul>
 <ul>
@@ -17,8 +17,8 @@
 <li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-Beta1-x86_64-DVD.iso.asc/download">​Digital Signature</a> (via sourceforge.net)</li>
 </ul>
 <ul>
-<li><strong><a href="/wiki/wiki/InstallationGuideR2B1">Installation Guide</a></strong> &lt;--- You probably want to read this!</li>
-<li><a href="/wiki/wiki/UpgradeToR2">Upgrading from Qubes R1 to Qubes R2?</a></li>
+<li><strong><a href="/wiki/wiki/InstallationGuideR2B1">Installation Guide for R2 Beta 1</a></strong></li>
+<li><a href="/wiki/wiki/UpgradeToR2">Upgrading from Qubes R1 to Qubes R2 Beta 1?</a></li>
 </ul>
 <h2 id="QubesRelease1">Qubes Release 1</h2>
 <ul>
