--- a/UpgradeToR2B1.html
+++ b/UpgradeToR2B1.html
@@ -1,5 +1,6 @@
-<h1 id="UpgradingQubesR1toR2beta">Upgrading Qubes R1 to R2 (beta)</h1>
-<p><strong>Note: Qubes R2 Beta has not been release yet, DO NOT follow those instructions before R2 Beta is released</strong></p>
+<h1 id="UpgradingQubesR1toR2Beta1">Upgrading Qubes R1 to R2 Beta 1</h1>
+<p><strong>Note: Qubes R2 Beta 1 is no longer supported! Please install or upgrade to a newer Qubes R2.</strong></p>
+<p><strong>Note: This page is kept for historical reasons only! Do not follow the instructions below'''</strong></p>
 <p>Existing users of Qubes R1 (but not R1 betas!) can upgrade their systems to the latest R2 beta release by following the procedure below. As usual, it is advisable to backup the system before proceeding with the upgrade</p>
 <h2 id="UpgradeallTemplateandStandaloneVMs">Upgrade all Template and Standalone VM(s)</h2>
 <p>By default, in Qubes R1, there is only one Template VM, however users are free to create more Template VMs for special purposes, as well as Standalone VMs. More information on using multiple Template VMs, as well as Standalone VMs, can be found [SoftwareUpdateVM here]. The steps described in this section should be repeated in <em>all</em> user's Template and Standalone VMs.</p>
