--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -26,7 +26,7 @@
 <li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R1-x86_64-DVD.iso.asc/download">​Digital Signature</a> (via sourceforge.net)</li>
 </ul>
 <ul>
-<li><strong><a href="/wiki/wiki/InstallationGuide">Installation Guide</a></strong> &lt;--- You probably want to read this!</li>
+<li><strong><a href="/wiki/wiki/InstallationGuide">Installation Guide</a></strong></li>
 </ul>
 <h2 id="Mirrors">Mirrors</h2>
 <p>Qubes ISOs are also available from the following mirrors:</p>
