--- a/InstallationGuideR2B1.html
+++ b/InstallationGuideR2B1.html
@@ -11,7 +11,7 @@
 </ol>
 <p></p>
 <h2 id="HardwareRequirements">Hardware Requirements</h2>
-<p>Please see the <a href="/wiki/wiki/HCLR2">Hardware Compatibility List?</a> page for more information on required and recommended hardware.</p>
+<p>Please see the <a href="/wiki/wiki/HCL">Hardware Compatibility List</a> page for more information on required and recommended hardware.</p>
 <p>Note: We don't recommend installing Qubes in a virtual machine! It will likely not work. Don't send emails asking about it. However, you can install it on an external USB hard drive and run from it, at least for testing (normally such disks are <em>orders</em> of magnitude slower than even the slowest internal hard drives).</p>
 <h2 id="DownloadinstallerISO">Download installer ISO</h2>
 <p>See <a href="/wiki/wiki/QubesDownloads">this page</a> for ISO downloads. Remember, we have absolutely no control over those servers, and so you should be assuming that they might be compromised, or just be serving a compromised ISOs because their operators decided so, for whatever reason. Always verify the digital signature on the downloaded ISO. See this <a href="/wiki/wiki/VerifyingSignatures">page</a> for more info about how to download and verify our GPG keys, and then verify the downloaded ISO:</p>
