--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -5,8 +5,8 @@
 </ul>
 <h2 id="QubesRelease2">Qubes Release 2</h2>
 <ul>
-<li>[Qubes-R2-Beta2-x86_64-DVD.iso] (Coming soon!)</li>
-<li>[Digital Signature] (Coming soon!)</li>
+<li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-Beta2-x86_64-DVD.iso/download">​Qubes-R2-Beta2-x86_64-DVD.iso</a> (via sourceforge.net)</li>
+<li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-Beta2-x86_64-DVD.iso.asc/download">​Digital Signature</a> (via sourceforge.net)</li>
 </ul>
 <ul>
 <li><strong><a href="/wiki/wiki/InstallationGuideR2B2">Installation Guide for R2 Beta 2</a></strong></li>
