--- a/QubesDevelopers.html
+++ b/QubesDevelopers.html
@@ -1,14 +1,23 @@
 <h1 id="QubesDevelopers">Qubes Developers</h1>
 <h2 id="ArchitectsCoreDevelopers">Architects &amp; Core Developers</h2>
 <ul>
-<li>Joanna Rutkowska <code>joanna at invisiblethingslab dot com</code> - architecture &amp; project management</li>
-<li>Marek Marczykowski <code>marmarek at invisiblethingslab dot com</code> - core, and pretty much everything these days :)</li>
+<li>Joanna Rutkowska <code>joanna at invisiblethingslab dot com</code> - architecture &amp; project management, original core, occasional addons</li>
+<li>Marek Marczykowski <code>marmarek at invisiblethingslab dot com</code> - everything <a href="/wiki/wiki/Xen/Linux">Xen/Linux?</a> related :)</li>
 </ul>
-<h2 id="Contributors">Contributors</h2>
+<h2 id="Contributorstotheopensourcecode">Contributors to the open source code</h2>
+<p>(Roughly in chronology order:)</p>
 <ul>
-<li>Rafal Wojtczuk <code>rafal at invisiblethingslab dot com</code> - architecture &amp; system-level stuff</li>
+<li>Rafal Wojtczuk <code>rafal at invisiblethingslab dot com</code> - architecture &amp; system-level stuff (notably original gui virtualization)</li>
 <li>Tomasz Sterna <code>tomek at xiaoka dot com</code> - installer &amp; gui</li>
 <li>Agnieszka Kostrzewa <code>a.kostrzewa at alx dot pl</code> - qubes-manager, docs</li>
 <li>Abel Luck <code>abel at outcomedubious dot im</code> - torvm</li>
 <li>Alexandre Bezroutchko <code>abb at gremwell dot com</code> - pvusb support</li>
+<li>Bruce A Downs <code>bruceadowns at gmail.com</code> - minor various cleanups and miscs</li>
+<li>Olivier Médoc <code>o_medoc at yahoo.fr</code> - core and gui fixes, template builder generalization (Arch Linux support)</li>
+<li>Timo Juhani Lindfors <code>timo.lindfors at iki.fi</code> - minor core cleanups</li>
+<li>Radoslaw Szkodzinski <code>astralstorm at gmail.com</code> - minor gui build fixes</li>
+</ul>
+<h2 id="Proprietarycodedevelopers">Proprietary code developers</h2>
+<ul>
+<li>Alexander Tereshkin <code>alex.tereshkin at gmail.com</code> - core windows (Qubes Windows Tools)</li>
 </ul>
