--- a/HCL.html
+++ b/HCL.html
@@ -28,7 +28,7 @@
 <p>AEM</p>
 <p>Remarks</p>
 <p>Standard features</p>
-<p>VT-x</p>
+<p>VT-x<br />(HVM)</p>
 <p>VT-d</p>
 <p>AEM</p>
 <p>Remarks</p>
