--- a/HCL.html
+++ b/HCL.html
@@ -21,7 +21,7 @@
 <h2 id="HardwareCompatibilityList">Hardware Compatibility List</h2>
 <p><strong>Device</strong></p>
 <p><strong>Qubes R1</strong></p>
-<p>Qubes R2 Beta2</p>
+<p><strong>Qubes R2 Beta2</strong></p>
 <p><strong>Reported by</strong></p>
 <p>Standard feautures</p>
 <p>VT-d</p>
