--- a/HCL.html
+++ b/HCL.html
@@ -77,6 +77,7 @@
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
+<p>Suspend doesn't work on 3.7.6 kernel, but work on 3.7.4</p>
 <p>Qubes core developers</p>
 <p>ASUS UX-31</p>
 <p>*</p>
