--- a/QubesBuilder.html
+++ b/QubesBuilder.html
@@ -18,10 +18,12 @@
 # (make sure to leave no spaces around &#39;=&#39; sign!) 
 # NO_SIGN=&quot;1&quot;
 
-# As time of writing this, the default for Qubes 1 VMs is fc15, but latest supported is fc17, so switch to newer one
+# As time of writing this, the default for Qubes 1 VMs is fc15,
+# but latest supported is fc17, so switch to newer one
 DISTS_VM=&quot;fc17&quot;
 
-# As time of writing this, the default for Qubes 2 Dom0 is fc18 and VMs is fc18 so if you want to build Qubes 2
+# As time of writing this, the default for Qubes 2 Dom0 is fc18
+# and VMs is fc18 so if you want to build Qubes 2
 DIST_DOM0=&quot;fc18&quot;
 DIST_VM=&quot;fc18&quot;
 </code></pre>
