--- a/QubesBuilder.html
+++ b/QubesBuilder.html
@@ -25,7 +25,7 @@ DISTS_VM=&quot;fc17&quot;
 # As time of writing this, the default for Qubes 2 Dom0 is fc18
 # and VMs is fc18 so if you want to build Qubes 2
 DIST_DOM0=&quot;fc18&quot;
-DIST_VM=&quot;fc18&quot;
+DISTS_VM=&quot;fc18&quot;
 </code></pre>
 <p>One additional useful requirement is that 'sudo root' work without any prompt, which is default on most distros (e.g. 'sudo bash' brings you the root shell without asking for any password). This is important as the builder needs to switch to root and then back to user several times during the build process.</p>
 <p>Additionally, if building with signing enabled (so NO_SIGN is not set), one must adjust ~/.rpmmacro file so that it point to the GPG key used for package signing, e.g.:</p>
