--- a/QubesBuilder.html
+++ b/QubesBuilder.html
@@ -17,16 +17,16 @@
 <pre class="wiki"><code>cp builder.conf.default builder.conf 
 # edit the builder.conf file and set the following variables: 
 # (make sure to leave no spaces around &#39;=&#39; sign!) 
-# NO_SIGN=&quot;1&quot;
+NO_SIGN=1
 
 # As time of writing this, the default for Qubes 1 VMs is fc15,
 # but latest supported is fc17, so switch to newer one
-DISTS_VM=&quot;fc17&quot;
+DISTS_VM=fc17
 
 # As time of writing this, the default for Qubes 2 Dom0 is fc18
 # and VMs is fc18 so if you want to build Qubes 2
-DIST_DOM0=&quot;fc18&quot;
-DISTS_VM=&quot;fc18&quot;
+DIST_DOM0=fc18
+DISTS_VM=fc18
 </code></pre>
 <p>One additional useful requirement is that 'sudo root' work without any prompt, which is default on most distros (e.g. 'sudo bash' brings you the root shell without asking for any password). This is important as the builder needs to switch to root and then back to user several times during the build process.</p>
 <p>Additionally, if building with signing enabled (so NO_SIGN is not set), one must adjust ~/.rpmmacro file so that it point to the GPG key used for package signing, e.g.:</p>
