--- a/UserDoc.html
+++ b/UserDoc.html
@@ -40,4 +40,5 @@
 <li><a href="https://groups.google.com/group/qubes-devel/msg/34f67194d3422bfa">​How to run TorBrowser using external tor proxy (from TorVM)</a></li>
 <li><a href="https://groups.google.com/group/qubes-devel/msg/4015c8900a813985">​Creating NetBSD VM</a></li>
 <li><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/e4ac093cabd37d2b/d5090c20d92c4128#d5090c20d92c4128">​Booting with GRUB2 and GPT</a></li>
+<li><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/5252bc3f6ed4b43e/d881deb5afaa2a6c#39c95d63fccca12b">​HTTP filtering proxy in Qubes firewall VM</a></li>
 </ul>
