--- a/HCL.html
+++ b/HCL.html
@@ -110,12 +110,31 @@
 <p>OK</p>
 <p>?</p>
 <p>?</p>
+<p>OK</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/jamRkZJDC0g/KTniY0Y3dioJ">​read more</a></p>
 <p><a href="https://groups.google.com/d/msg/qubes-devel/7JumqdldVJM/n9TiDVxc2jkJ">​j</a></p>
 <p>Fujitsu S751<br /> (HD3000; QM67; i5-2520M; BIOS 1.18)</p>
 <p>OK</p>
 <p>OK</p>
 <p>?</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>?</p>
+<p>needs kernel downgrade to 3.7.4</p>
 <p><a href="https://groups.google.com/forum/#!msg/qubes-devel/xoyNCigBvFE/ER61L6TbVpwJ">​Zrubi</a></p>
+<p>HP Pavilion Sleekbook 14-B030TU<br /> (Ivy Bridge; Intel HD Graphich; i5-3317; BIOS F.06)</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>?</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/ZC_SQJhXVOM/4aLjEc7GIsUJ">Stephen Boyd</a></p>
 <p>Lenovo Thinkpad W510<br /> (nVidia; i7-Q820)</p>
 <p>OK</p>
 <p>OK</p>
